healthcare page spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 .App {
 	margin-top: 80px;
 }
+h3 {
+	font-size: 2rem;
+}
